# Fishing-Game

./: .gitignore  CMakeLists.txt  FishingGame.cpp  FishingGame.h  FishingGame.kdev4  GameLog.cpp  GameLog.h  LogItem.cpp  LogItem.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Makefile  README.md  byteTable.cpp  byteTable.h  main.cpp  seaWidget.cpp  seaWidget.h  seaWidgetImages.qrc
Test saves/: test2.slog  test2.stab  tezt.slog  tezt.stab
events/: README.txt
images/dev/: .directory  FullNetFG.xcf  NetFG.xcf  mouseHook.xcf  redBoy.xcf  seaTileFG.xcf  seaTileFG.xcf.bck
